<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="iut.reignrise.projet.Vues.MainActivity"
    android:background="@drawable/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp">
        <ImageButton
            android:id="@+id/btnParametre"
            android:layout_width="46dp"
            android:layout_height="42dp"
            android:background="@color/transparent"
            android:src="@drawable/imagebtnparametre"
            android:scaleType="fitXY"
            android:onClick="clic" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/idNomApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reing_rise"
                style="@style/titreActivity"
                android:textSize="50dp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/textViewSurname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textViewsurname"
                    style="@style/text"
                    android:textSize="25dp"/>
                <EditText
                    android:id="@+id/editTextSurname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    style="@style/editeText"
                    android:padding="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/textErreur"
                    style="@style/erreur"
                    android:textColor="@color/lightGrey"/>
                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/textViewAdresse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/text"
                        android:text="@string/votreDomaine"
                        android:gravity="center"
                        android:textSize="16sp"/>
                    <TextView
                    android:id="@+id/textAdresse"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    style="@style/text"
                    android:gravity="center"
                    android:textSize="16sp"/>
                </LinearLayout>
                <Button
                    android:id="@+id/buttonJouer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="clic"
                    style="@style/button"
                    android:text="@string/btnJouer" />
                <Button
                    android:id="@+id/buttonQuitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="clic"
                    style="@style/button"
                    android:text="@string/msgQuitter" />
                <ImageButton
                    android:id="@+id/btnScores"
                    android:layout_width="111dp"
                    android:layout_height="102dp"
                    android:background="@color/transparent"
                    android:src="@drawable/trophe"
                    android:scaleType="fitXY"
                    android:onClick="clic"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>