<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="iut.reignrise.projet.Vues.ActivityTableauDesScores"
    android:background="@drawable/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">
            <ImageButton
                android:id="@+id/btnParametre"
                android:layout_width="46dp"
                android:layout_height="42dp"
                android:background="@color/transparent"
                android:src="@drawable/imagebtnparametre"
                android:scaleType="fitXY"
                android:onClick="clic" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <TextView
                    android:id="@+id/textViewTableauDesScores"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/titreActivity"
                    android:text="@string/textViewTableauDesScores"
                    android:textSize="36sp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <TableLayout
                style="@style/frag2TableLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp">
                <TableRow style="@style/frag1HeaderTableRow">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:text="@string/textViewsurname"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:text="@string/Score"/>
                </TableRow>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:background="@color/white">
                    <ListView
                        android:id="@+id/listView"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center"/>
                </LinearLayout>
            </TableLayout>
            <Button
                android:id="@+id/btnNouvellePartie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="clic"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                style="@style/button"
                android:text="Nouvelle partie !"></Button>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>